--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="navbar">
                 <ul>
                     <li>
-                        <a href="">Sign Up</a>
+                        <a href="register.php">Sign Up</a>
                     </li>
                 </ul>
                 <button class="login" onclick="window.location.href = 'login.html'">Login</button> 
@@ -87,10 +87,18 @@
         </div>
 
         <div class="spotify-playlists">
-            <h2>Spotify Playlist</h2>
+            <h2>Indian Top Hits</h2>
             <div class="list">
                 <div class="item">
-                    <img src="./images/Today_s Top Hits.jpg" alt="">
+                    <img class="music-item" src="./images/ik vaari aa.jpg" alt=""/>
+                    <div class="play">
+                        <span class="fa fa-play"></span>
+                    </div>
+                    <h4>Ik Vaari Aa</h4>
+                    <p>Arijit Singh & Pritam</p>
+                </div>
+                <div class="item">
+                    <img class="music-item" src="./images/RapCaviar.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -98,15 +106,7 @@
                     <p>Olivia Rodrigo is on the top of hottest 50!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/RapCaviar.jpg" alt="">
-                    <div class="play">
-                        <span class="fa fa-play"></span>
-                    </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
-                </div>
-                <div class="item">
-                    <img src="./images/All Out 80s.jpg" alt="">
+                    <img class="music-item" src="./images/All Out 80s.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -114,7 +114,7 @@
                     <p>Biggest Songs of 80s!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/Rock Classics.jpg" alt="">
+                    <img class="music-item" src="./images/Rock Classics.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -122,7 +122,7 @@
                     <p>Olivia Rodrigo is on the top of hottest 50!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/Viva Latino.jpg" alt="">
+                    <img class="music-item" src="./images/Viva Latino.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -131,10 +131,34 @@
                 </div>
             </div>
 
-            <h2>Focus</h2>
+            <h2>English Hits Of All Time</h2>
             <div class="list">
                 <div class="item">
-                    <img src="./images/Chill Hits.jpg" alt="">
+                    <img class="music-item" src="./images/cold outside.jpg" alt="">
+                    <div class="play">
+                        <span class="fa fa-play"></span>
+                    </div>
+                    <h4>Cold Outside</h4>
+                    <p>Stellar</p>
+                </div>
+                <div class="item">
+                    <img class="music-item" src="./images/faded.jpeg" alt="">
+                    <div class="play">
+                        <span class="fa fa-play"></span>
+                    </div>
+                    <h4>Faded</h4>
+                    <p>Alan Walker</p>
+                </div>
+                <div class="item">
+                    <img class="music-item" src="./images/unstoppable.jpeg" alt="">
+                    <div class="play">
+                        <span class="fa fa-play"></span>
+                    </div>
+                    <h4>Unstoppable</h4>
+                    <p>Sia</p>
+                </div>
+                <div class="item">
+                    <img class="music-item" src="./images/Instrumental Study.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -142,31 +166,7 @@
                     <p>Olivia Rodrigo is on the top of hottest 50!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/Deep Focus.jpg" alt="">
-                    <div class="play">
-                        <span class="fa fa-play"></span>
-                    </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
-                </div>
-                <div class="item">
-                    <img src="./images/Peaceful Piano.jpg" alt="">
-                    <div class="play">
-                        <span class="fa fa-play"></span>
-                    </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
-                </div>
-                <div class="item">
-                    <img src="./images/Instrumental Study.jpg" alt="">
-                    <div class="play">
-                        <span class="fa fa-play"></span>
-                    </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
-                </div>
-                <div class="item">
-                    <img src="./images/Workday Lounge.jpg" alt="">
+                    <img class="music-item" src="./images/Workday Lounge.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -178,7 +178,7 @@
             <h2>Sound Of India</h2>
             <div class="list">
                 <div class="item">
-                    <img src="./images/The Sound of Bengaluru.jpg" alt="">
+                    <img class="music-item" src="./images/The Sound of Bengaluru.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -186,7 +186,7 @@
                     <p>Olivia Rodrigo is on the top of hottest 50!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/The Sound of Chennai.jpg" alt="">
+                    <img class="music-item" src="./images/The Sound of Chennai.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -194,7 +194,7 @@
                     <p>Olivia Rodrigo is on the top of hottest 50!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/The Sound of Hyderabad.jpg" alt="">
+                    <img class="music-item" src="./images/The Sound of Hyderabad.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -202,7 +202,7 @@
                     <p>Olivia Rodrigo is on the top of hottest 50!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/The Sound of Kolkata.jpg" alt="">
+                    <img class="music-item" src="./images/The Sound of Kolkata.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -210,7 +210,7 @@
                     <p>Olivia Rodrigo is on the top of hottest 50!</p>
                 </div>
                 <div class="item">
-                    <img src="./images/The Sound of Mumbai.jpg" alt="">
+                    <img class="music-item" src="./images/The Sound of Mumbai.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
@@ -226,11 +226,12 @@
                 <p>Sign up to get unlimited songs and podcasts with occasional ads. No credit card is needed!</p>
             </div>
             <div class="button">
-                <button type="button">Sign up for free</button>
+                <button type="button" onclick="window.location.href = 'register.html'">Sign up for free</button>
             </div>
         </div>
     </div>
 
+    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/ef9a692198.js" crossorigin="anonymous"></script>
 </body>
 
