--- a/index.html
+++ b/index.html
@@ -95,40 +95,41 @@
                         <span class="fa fa-play"></span>
                     </div>
                     <h4>Ik Vaari Aa</h4>
-                    <p>Arijit Singh & Pritam</p>
+                    <p>Arijit Singh, Pritam</p>
                 </div>
                 <div class="item">
-                    <img class="music-item" src="./images/RapCaviar.jpg" alt="">
+                    <img class="music-item" src="./images/chaleya.jpeg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
+                    <h4>Chaleya</h4>
+                    <p>Arijit Singh, Shilpa Rao</p>
                 </div>
                 <div class="item">
-                    <img class="music-item" src="./images/All Out 80s.jpg" alt="">
+                    <img class="music-item" src="./images/jannetein kahan.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
-                    <h4>All Out 80s</h4>
-                    <p>Biggest Songs of 80s!</p>
+                    <h4>Jannetein Kahan</h4>
+                    <p>KK</p>
                 </div>
                 <div class="item">
-                    <img class="music-item" src="./images/Rock Classics.jpg" alt="">
+                    <img class="music-item" src="./images/hum fir milenge.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
+                    <h4>Hum Fir Milenge</h4>
+                    <p>Rohan Rohan</p>
                 </div>
                 <div class="item">
-                    <img class="music-item" src="./images/Viva Latino.jpg" alt="">
+                    <img class="music-item" src="./images/hookah bar.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
+                    <h4>Hookah Bar</h4>
+                    <p>Himesh Reshamiyya, Aaman Trikha</p>
                 </div>
+                
             </div>
 
             <h2>English Hits Of All Time</h2>
@@ -158,20 +159,20 @@
                     <p>Sia</p>
                 </div>
                 <div class="item">
-                    <img class="music-item" src="./images/Instrumental Study.jpg" alt="">
+                    <img class="music-item" src="./images/people you know.jpg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
+                    <h4>People You Know</h4>
+                    <p>Selena Gomez</p>
                 </div>
                 <div class="item">
-                    <img class="music-item" src="./images/Workday Lounge.jpg" alt="">
+                    <img class="music-item" src="./images/starboy.jpeg" alt="">
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
-                    <h4>Today's Top Hits</h4>
-                    <p>Olivia Rodrigo is on the top of hottest 50!</p>
+                    <h4>Starboy</h4>
+                    <p>Weekend</p>
                 </div>
             </div>
 
